Inicio del Repositorio

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
             <div id="header" class="container">
                 <div id="logo">
                     <h1>
-                        <a href="/bichos">Bichos</a>
+                        <a href="/Bichos">Bichos</a>
                     </h1>
                     <h2>
                         Colección Entomológica del<br/> Centro de Biosistemas de la Universidad Jorge Tadeo Lozano.
