Inicio del Repositorio

--- a/src/main/webapp/pages/admin/author.xhtml
+++ b/src/main/webapp/pages/admin/author.xhtml
@@ -14,13 +14,13 @@
 				<f:facet name="header">
 				    <p:commandButton value="#{authorBean.getColumn(idType)}" update="detailTypeDialog :authorTypeDetailForm" actionListener="#{authorBean.setIdType(idType)}" oncomplete="PF('authorTypeDetail').show()"  title="Ver detalle"/>
 				</f:facet>
-				<p:selectBooleanCheckbox id="checkDinamic" value="true" >
-				    <p:ajax listener="#{authorBean.editarCheck}" />
+				<p:selectBooleanCheckbox id="checkDinamic" value="#{author.idTypes[idType]}">
+				    <p:ajax listener="#{authorBean.editarCheck(idType, author.idAuthor)}" update="formAuthor"/>
 				</p:selectBooleanCheckbox>
 			 </p:columns>
-			 <p:column headerText="Acciones" style="">
-				<p:commandButton id="editButton" icon="ui-icon-zoomin" oncomplete="PF('authorDetail').show()" update=":authorDetailForm" title="Detalle de #{author.authorName}" actionListener="#{authorBean.setAuthorPivot(author)}"/>
-				<p:commandButton id="deleteButton" icon="ui-icon-trash" oncomplete="PF('authorDelete').show()" title="Eliminar #{author.authorName}"/>
+			 <p:column headerText="Acciones">
+				<p:commandButton id="editButton" icon="ui-icon-pencil" oncomplete="PF('authorDetail').show()" update="detailDialog :authorDetailForm" title="Editar a #{author.authorName}" actionListener="#{authorBean.prepareTransaction(author.idAuthor)}"/>
+				<p:commandButton id="deleteButton" icon="ui-icon-trash" oncomplete="PF('authorDelete').show()" title="Eliminar #{author.authorName}" onclick="#{authorBean.prepareTransaction(author.idAuthor)}"/>
 			 </p:column>
 			 <f:facet name="footer">
 				<p:commandButton id="btnCreate" value="Nuevo Autor" oncomplete="PF('authorCreate').show()" update=":authorCreateForm" title="Crear Autor" actionListener="#{authorBean.prepareCreateAuthor()}"/>
@@ -33,6 +33,11 @@
 	   <p:dialog id="detailDialog" widgetVar="authorDetail" modal="true" dynamic="true" resizable="false" appendTo="@(body)" header="#{authorBean.author.authorName}" closeOnEscape="true"> 
 		  <p:outputPanel>
 			 <h:form id="authorDetailForm">
+				<p:panelGrid id="displayCreate" columns="2">
+				    <p:outputLabel value="Nombre Autor" for="autName" />
+				    <p:inputText id="autName" value="#{authorBean.author.authorName}" title="Nombre Autor" rendered="true" style="width: 100%" required="true" requiredMessage="Debes definir el nombre del Autor!"/>
+				</p:panelGrid>
+				<p:commandButton id="detailEdit" value="Editar" action="#{authorBean.edit()}" update=":formAuthor" oncomplete="PF('authorDetail').hide()"/>
 				<p:commandButton id="detailClose" value="Cerrar" onclick="PF('authorDetail').close()"/>
 			 </h:form>
 		  </p:outputPanel>
@@ -42,9 +47,11 @@
 		  <p:outputPanel>
 			 <h:form id="authorTypeDetailForm">
 				<p:panelGrid id="displayCreate" columns="2">
-				    <p:outputLabel value="Nombre Autor" for="autName" />
-				    <p:inputText id="autName" value="#{authorBean.author.authorName}" title="Nombre Autor" rendered="true" style="width: 100%" required="true" requiredMessage="Debes definir el nombre del Autor!"/>
+				    <p:outputLabel value="Nombre de Tipo de Autor" for="autTypeName" />
+				    <p:inputText id="autTypeName" value="#{authorBean.authorType.autyName}" title="Nombre tipo de autor" rendered="true" style="width: 100%" required="true" requiredMessage="Debes definir el nombre del tipo de Autor!"/>
 				</p:panelGrid>
+				<p:commandButton id="detailTypeDel" value="Eliminar" onclick="PF('authorTypeDelete').show()" oncomplete="PF('authorTypeDetail').hide()"/>
+				<p:commandButton id="detailTypeEdit" value="Editar" action="#{authorBean.editType()}" update=":formAuthor" oncomplete="PF('authorTypeDetail').hide()"/>
 				<p:commandButton id="detailTypeClose" value="Cerrar" onclick="PF('authorTypeDetail').close()"/>
 			 </h:form>
 		  </p:outputPanel>
@@ -74,6 +81,13 @@
 		  <h:form id="deleteForm" style=""> 
 			 <p:commandButton id="deleteYesButton" value="Eliminar" action="#{authorBean.delete}" update=":formAuthor" oncomplete="PF('authorDelete').hide()" />
 			 <p:commandButton id="deleteNoButton" value="Cancelar" onclick="PF('authorDelete').hide()" type="button" />
+		  </h:form>
+	   </p:confirmDialog>
+
+	   <p:confirmDialog id="deleteTypeDialog" appendTo="@(body)" widgetVar="authorTypeDelete" message="¿Está seguro que desea eliminar este registro?" showEffect="fade" hideEffect="fade" header="Confirmar eliminación" severity="alarm">
+		  <h:form id="deleteTypeForm" style=""> 
+			 <p:commandButton value="Eliminar" action="#{authorBean.deleteType}" update=":formAuthor" oncomplete="PF('authorTypeDelete').hide()" />
+			 <p:commandButton value="Cancelar" onclick="PF('authorTypeDelete').hide()" type="button" />
 		  </h:form>
 	   </p:confirmDialog>
     </ui:define>
