--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -1,30 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html	xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-	 xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-	 xmlns:p="http://primefaces.org/ui">
+	 xmlns:p="http://primefaces.org/ui"
+	 xmlns:ui="http://java.sun.com/jsf/facelets"
+	 xmlns:f="http://java.sun.com/jsf/core">
     <head>
         <title>Colección Entomológica 3D - Bichos</title>
-        <link href="css/sansPro.css" rel="stylesheet" />
-        <link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
-	   <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/sansPro.css" type="text/css" rel="stylesheet"/>
+        <link href="css/default.css" type="text/css" rel="stylesheet"/>
+	   <link href="css/collage/transitions.css" type="text/css" rel="stylesheet"/>
+	   <link href="css/collage/collage.css" type="text/css" rel="stylesheet"/>
+	   <link href="js/fancybox/jquery.fancybox.css" type="text/css" rel="stylesheet"/>
         <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
-        <script type="text/javascript" src="js/fancybox/jquery.fancybox.js?v=2.1.5"></script>
-        <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
+	   <script src="js/collage/jquery.collagePlus.js" type="text/javascript" />
+	   <script src="js/collage/extras/jquery.collageCaption.js" type="text/javascript" />
+	   <script src="js/collage/extras/jquery.removeWhitespace.js" type="text/javascript" />
+	   <script src="js/fancybox/jquery.fancybox.js" type="text/javascript" />
         <script type="text/javascript">
-		  $("a.button.fancybox").fancybox({
-			 padding: 0,
-			 openEffect: 'fade',
-			 openSpeed: 250,
-			 closeEffect: 'fade',
-			 closeSpeed: 250,
-			 closeClick: true,
-			 helpers: {
-				overlay: null
-			 }
+		  $(window).load(function() {
+			 $(document).ready(function() {
+				collage();
+				$('.Collage').collageCaption();
+			 });
+
+			 $(".fancy").fancybox({
+				padding: 0,
+				openEffect: 'fade',
+				openSpeed: 250,
+				closeEffect: 'fade',
+				closeSpeed: 250,
+				closeClick: true,
+				helpers: {
+				    overlay: null
+				}
+			 });
+		  });
+
+		  function collage() {
+			 $('.Collage').removeWhitespace().collagePlus({
+				'fadeSpeed': 2000,
+				'targetHeight': 200
+			 });
+		  }
+
+		  var resizeTimer = null;
+		  $(window).bind('resize', function() {
+			 $('.Collage .Image_Wrapper').css("opacity", 0);
+			 if (resizeTimer)
+				clearTimeout(resizeTimer);
+			 resizeTimer = setTimeout(collage, 200);
 		  });
 
         </script>
@@ -54,24 +79,19 @@
 		  </div>
 	   </div>
 	   <div id="box" class="box">
-		  <div id="wrapper" class="wrapper">
-			 <section id="todays_deals" class="deal_nav"></section>
-			 <section id="slider_feature_container">
-				<div id="slider_feature"></div>
-			 </section>
-			 <div id="slide_prev"></div>
-			 <div id="slide_next"></div>
-			 <section id="slider_left_container">
-				<div id="slider_left"></div>
-			 </section>
-			 <section id="slider_right_container">
-				<div id="slider_right"></div>
-			 </section>
-			 <section id="collection" class="deal_nav"></section>
+            <div id="portfolio" class="container">
+			 <div class="Collage effect-parent">
+				<ui:repeat value="#{specimenContentBean.allSpecimenContents}" var="scon" step="1">
+				    <div class="Image_Wrapper" data-caption="#{scon.shortDescription}">
+					   <h:link outcome="specimenDetail.xhtml" styleClass="fancy" target="_blank">
+						  <p:graphicImage value="#{specimenContentBean.getSpecimenThumb()}">
+							 <f:param name="idSpecimen" value="#{scon.idSpecimen.idSpecimen}" />
+						  </p:graphicImage>
+					   </h:link>
+				    </div>
+				</ui:repeat>
+			 </div>
 		  </div>
-		  <script type="text/javascript" src="js/jquery.js"></script>
-		  <script type="text/javascript" src="js/jquery.hoverIntent.min.js"></script>
-		  <script type="text/javascript" src="js/slider.js"></script>
 	   </div>
 	   <div id="copyright" class="container">
 		  <p>
