--- a/src/main/webapp/specimenDetail.xhtml
+++ b/src/main/webapp/specimenDetail.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:f="http://java.sun.com/jsf/core">
-    <f:event type="preRenderView" listener="#{specimenBean.specimensJSON()}" />
+<html>
+    <body><h1>HOLA MUNDO</h1></body>
 </html>
